Fixed word wrap.

--- a/style.css
+++ b/style.css
@@ -19,8 +19,7 @@ License URI: @license  http://www.opensource.org/licenses/gpl-license.php GPL v3
 body {
   background-color: #fff;
   color: #555555;
-	-ms-word-break: break-all;
-	word-break: break-all;
+  word-wrap: break-word;
 }
 
 h1, h2, h3, h4, h5, h6 {
